--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://lighty.github.io/one-minite-writing/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
